changed to hidden to stop scrollbars on ie

--- a/sites/all/themes/symbio/assets/scss/_custom.scss
+++ b/sites/all/themes/symbio/assets/scss/_custom.scss
@@ -901,7 +901,7 @@ select {
 }
 
 .masthead-nav {
-	overflow: auto;
+	overflow: hidden;
 }
 
 .tab-links,
